[gd_scene load_steps=29 format=2]

[ext_resource path="res://scripts/player_modules/input.gd" type="Script" id=1]
[ext_resource path="res://scripts/player_modules/mover.gd" type="Script" id=2]
[ext_resource path="res://scripts/main.gd" type="Script" id=3]
[ext_resource path="res://scripts/player_modules/player.gd" type="Script" id=4]
[ext_resource path="res://scenes/egg_basket.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/egg_cannon.gd" type="Script" id=6]
[ext_resource path="res://scripts/state.gd" type="Script" id=7]
[ext_resource path="res://scripts/camera.gd" type="Script" id=8]
[ext_resource path="res://assets/fonts/kavoon_regular.tres" type="DynamicFont" id=9]
[ext_resource path="res://scripts/GUI.gd" type="Script" id=10]
[ext_resource path="res://tileset.meshlib" type="MeshLibrary" id=11]
[ext_resource path="res://scripts/player_modules/powerups.gd" type="Script" id=12]
[ext_resource path="res://scripts/eggs.gd" type="Script" id=13]
[ext_resource path="res://assets/ui/game_over.png" type="Texture" id=14]
[ext_resource path="res://assets/fonts/kavoon_regular.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://scripts/game_over.gd" type="Script" id=16]
[ext_resource path="res://scripts/powerups.gd" type="Script" id=17]

[sub_resource type="BoxShape" id=15]
extents = Vector3( 39.5531, 14.6, 1 )

[sub_resource type="BoxShape" id=1]
extents = Vector3( 27.8667, 1, 17.7775 )

[sub_resource type="PhysicsMaterial" id=6]
friction = 0.2
bounce = 0.1

[sub_resource type="CapsuleShape" id=23]
height = 2.0

[sub_resource type="SpatialMaterial" id=24]
albedo_color = Color( 0.960784, 0.219608, 0.219608, 1 )

[sub_resource type="CapsuleMesh" id=25]
mid_height = 2.0
radial_segments = 16
rings = 3

[sub_resource type="CylinderShape" id=21]
radius = 3.0
height = 0.25

[sub_resource type="SpatialMaterial" id=26]
albedo_color = Color( 0.215686, 0.654902, 0.843137, 1 )

[sub_resource type="CylinderMesh" id=22]
top_radius = 3.0
bottom_radius = 3.0
height = 0.25

[sub_resource type="CubeMesh" id=16]
size = Vector3( 1, 1, 2 )

[sub_resource type="DynamicFont" id=27]
size = 96
font_data = ExtResource( 15 )

[node name="Main" type="Spatial"]
script = ExtResource( 3 )

[node name="State" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 7 )

[node name="Eggs" type="Node" parent="."]
script = ExtResource( 13 )

[node name="Cannons" type="Node" parent="."]

[node name="Powerups" type="Spatial" parent="."]
script = ExtResource( 17 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 11 )
cell_size = Vector3( 4, 4, 4 )
cell_center_y = false
data = {
"cells": PoolIntArray( 7, 0, 655362, 8, 0, 1441792, 9, 0, 0, 65526, 0, 0, 65527, 0, 0, 65528, 0, 2, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -7, 0, 0, -6, 0, 0, -5, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, 7, 1, 655362, 8, 1, 1441792, 9, 1, 7, 65526, 1, 7, 65528, 1, 2, 65544, 1, 1048578, 65545, 1, 1048581, 131062, 1, 5, 131063, 1, 1048578, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -7, 1, 0, -6, 1, 0, -5, 1, 0, -4, 1, 0, -3, 1, 0, -2, 1, 0, -1, 1, 0, 7, 2, 655362, 8, 2, 1441792, 9, 2, 7, 65526, 2, 7, 65528, 2, 2, 65544, 2, 1441792, 65545, 2, 0, 131062, 2, 0, 131063, 2, 1048576, -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, -65533, 2, 0, -65532, 2, 0, -65531, 2, 0, -65530, 2, 0, -7, 2, 0, -6, 2, 0, -5, 2, 0, -4, 2, 0, -3, 2, 0, -2, 2, 0, -1, 2, 0, 7, 3, 655362, 8, 3, 1441792, 9, 3, 7, 65526, 3, 7, 65528, 3, 2, 65544, 3, 1441792, 65545, 3, 0, 131062, 3, 0, 131063, 3, 1048576, -65536, 3, 0, -65535, 3, 0, -65534, 3, 0, -65533, 3, 0, -65532, 3, 0, -65531, 3, 0, -65530, 3, 0, -7, 3, 0, -6, 3, 0, -5, 3, 0, -4, 3, 0, -3, 3, 0, -2, 3, 0, -1, 3, 0, 7, 4, 655362, 9, 4, 7, 65526, 4, 7, 65527, 4, 7, 65528, 4, 2, 65544, 4, 1441792, 65545, 4, 0, 131062, 4, 0, 131063, 4, 1048576, -65536, 4, 0, -65535, 4, 0, -65534, 4, 0, -65533, 4, 0, -65532, 4, 0, -65531, 4, 0, -65530, 4, 0, -7, 4, 0, -6, 4, 0, -5, 4, 0, -4, 4, 0, -3, 4, 0, -2, 4, 0, -1, 4, 0, 0, 5, 1048578, 1, 5, 1048578, 2, 5, 1048578, 3, 5, 1048578, 4, 5, 1048578, 5, 5, 1048578, 6, 5, 1048578, 7, 5, 1048581, 9, 5, 7, 65526, 5, 7, 65527, 5, 7, 65528, 5, 5, 65529, 5, 1048578, 65530, 5, 1048578, 65531, 5, 1048578, 65532, 5, 1048578, 65533, 5, 1048578, 65534, 5, 1048578, 65535, 5, 1048578, 65544, 5, 1441792, 65545, 5, 0, 131062, 5, 0, 131063, 5, 1048576, 0, 6, 0, 1, 6, 0, 2, 6, 0, 3, 6, 0, 7, 6, 7, 8, 6, 7, 9, 6, 7, 65527, 6, 7, 65528, 6, 7, 65529, 6, 7, 65532, 6, 0, 65533, 6, 0, 65534, 6, 0, 65535, 6, 0, 65538, 6, 655362, 65539, 6, 1048576, 65540, 6, 1048576, 65541, 6, 1048576, 65542, 6, 1048576, 65543, 6, 1048576, 65544, 6, 1048576, 65545, 6, 0, 131063, 6, 1048576, 131064, 6, 1048576, 131065, 6, 0, 131066, 6, 1048576, 131067, 6, 1048576, 131068, 6, 1048576, 131069, 6, 2, 0, 7, 0, 1, 7, 0, 2, 7, 7, 3, 7, 7, 4, 7, 7, 5, 7, 7, 6, 7, 7, 7, 7, 7, 65529, 7, 7, 65530, 7, 7, 65531, 7, 7, 65532, 7, 7, 65533, 7, 7, 65534, 7, 0, 65535, 7, 0, 65538, 7, 1048581, 65539, 7, 0, 65540, 7, 0, 65541, 7, 0, 65542, 7, 0, 65543, 7, 0, 131064, 7, 0, 131065, 7, 0, 131066, 7, 0, 131067, 7, 0, 131068, 7, 0, 131069, 7, 5, 0, 65529, 0, 1, 65529, 0, 2, 65529, 7, 3, 65529, 7, 4, 65529, 7, 5, 65529, 7, 6, 65529, 7, 7, 65529, 7, 65528, 65529, 7, 65529, 65529, 7, 65530, 65529, 7, 65531, 65529, 7, 65532, 65529, 7, 65533, 65529, 7, 65534, 65529, 655360, 65535, 65529, 0, 65538, 65529, 655365, 65539, 65529, 1441792, 65540, 65529, 1441792, 65541, 65529, 1441792, 65542, 65529, 1441792, 65543, 65529, 1441792, 131064, 65529, 655360, 131065, 65529, 655360, 131066, 65529, 1441792, 131067, 65529, 1441792, 131068, 65529, 1441792, 131069, 65529, 1441797, 0, 65530, 0, 1, 65530, 0, 2, 65530, 0, 3, 65530, 0, 4, 65530, 0, 5, 65530, 0, 6, 65530, 0, 7, 65530, 0, 8, 65530, 7, 9, 65530, 7, 65526, 65530, 7, 65527, 65530, 7, 65528, 65530, 7, 65529, 65530, 655360, 65530, 65530, 655360, 65531, 65530, 655360, 65532, 65530, 655360, 65533, 65530, 655360, 65534, 65530, 655360, 65535, 65530, 655360, 65538, 65530, 655362, 65539, 65530, 0, 65540, 65530, 0, 65541, 65530, 0, 65542, 65530, 0, 65543, 65530, 0, 65544, 65530, 1048576, 65545, 65530, 0, 131062, 65530, 0, 131063, 65530, 1048576, 131064, 65530, 655360, 131065, 65530, 655360, 131066, 65530, 655360, 131067, 65530, 655360, 131068, 65530, 655360, 131069, 65530, 2, 0, 65531, 1441794, 1, 65531, 1441794, 2, 65531, 1441794, 3, 65531, 1441794, 4, 65531, 1441794, 5, 65531, 1441794, 6, 65531, 1441794, 7, 65531, 655365, 8, 65531, 7, 9, 65531, 7, 65526, 65531, 7, 65527, 65531, 7, 65528, 65531, 1441797, 65529, 65531, 1441794, 65530, 65531, 1441794, 65531, 65531, 1441794, 65532, 65531, 1441794, 65533, 65531, 1441794, 65534, 65531, 1441794, 65535, 65531, 1441794, 65544, 65531, 1441792, 65545, 65531, 0, 131062, 65531, 0, 131063, 65531, 1048576, 7, 65532, 655362, 9, 65532, 7, 65526, 65532, 7, 65528, 65532, 2, 65544, 65532, 1441792, 65545, 65532, 0, 131062, 65532, 0, 131063, 65532, 1048576, -65536, 65532, 0, -65535, 65532, 0, -65534, 65532, 0, -65533, 65532, 0, -65532, 65532, 0, -65531, 65532, 0, -65530, 65532, 0, -7, 65532, 0, -6, 65532, 0, -5, 65532, 0, -4, 65532, 0, -3, 65532, 0, -2, 65532, 0, -1, 65532, 0, 7, 65533, 655362, 9, 65533, 7, 65526, 65533, 7, 65528, 65533, 2, 65544, 65533, 1441792, 65545, 65533, 0, 131062, 65533, 0, 131063, 65533, 1048576, -65536, 65533, 0, -65535, 65533, 0, -65534, 65533, 0, -65533, 65533, 0, -65532, 65533, 0, -65531, 65533, 0, -65530, 65533, 0, -7, 65533, 0, -6, 65533, 0, -5, 65533, 0, -4, 65533, 0, -3, 65533, 0, -2, 65533, 0, -1, 65533, 0, 7, 65534, 655362, 8, 65534, 1441792, 9, 65534, 7, 65526, 65534, 7, 65528, 65534, 2, 65544, 65534, 1441792, 65545, 65534, 0, 131062, 65534, 0, 131063, 65534, 1048576, -65536, 65534, 0, -65535, 65534, 0, -65534, 65534, 0, -65533, 65534, 0, -65532, 65534, 0, -65531, 65534, 0, -65530, 65534, 0, -7, 65534, 0, -6, 65534, 0, -5, 65534, 0, -4, 65534, 0, -3, 65534, 0, -2, 65534, 0, -1, 65534, 0, 7, 65535, 655362, 8, 65535, 1441792, 9, 65535, 7, 65526, 65535, 7, 65528, 65535, 2, 65544, 65535, 1441794, 65545, 65535, 655365, 131062, 65535, 1441797, 131063, 65535, 1441794, -65536, 65535, 0, -65535, 65535, 0, -65534, 65535, 0, -65533, 65535, 0, -65532, 65535, 0, -65531, 65535, 0, -65530, 65535, 0, -7, 65535, 0, -6, 65535, 0, -5, 65535, 0, -4, 65535, 0, -3, 65535, 0, -2, 65535, 0, -1, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="Walls" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.27954, 26.3345 )
shape = SubResource( 15 )

[node name="CollisionShape2" type="CollisionShape" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.27954, -24.7766 )
shape = SubResource( 15 )

[node name="CollisionShape3" type="CollisionShape" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 36.3449, 7.27954, -0.678744 )
shape = SubResource( 15 )

[node name="CollisionShape4" type="CollisionShape" parent="Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -36.8129, 7.27954, -0.678744 )
shape = SubResource( 15 )

[node name="Floor" type="StaticBody" parent="." groups=["Breakers"]]

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.77367, 2.01127 )
shape = SubResource( 1 )

[node name="Player" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.11705, 0 )
collision_layer = 5
collision_mask = 5
mode = 2
physics_material_override = SubResource( 6 )
gravity_scale = 5.0
can_sleep = false
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 23 )

[node name="MeshInstance" type="MeshInstance" parent="Player"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
material_override = SubResource( 24 )
mesh = SubResource( 25 )
material/0 = null

[node name="CollisionShape3" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.450565, 0 )
shape = SubResource( 21 )

[node name="MeshInstance2" type="MeshInstance" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.450565, 0 )
material_override = SubResource( 26 )
mesh = SubResource( 22 )
material/0 = null

[node name="Mover" type="Node" parent="Player"]
script = ExtResource( 2 )

[node name="Input" type="Node" parent="Player"]
script = ExtResource( 1 )
player_num = 0

[node name="Powerups" type="Node" parent="Player"]
script = ExtResource( 12 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.999844, 0.00567631, 0.0167452, 0.0130175, 0.877224, 0.479904, -0.0119652, 0.480047, -0.877161, -0.082962, 18.6648, -31.175 )
current = true
script = ExtResource( 8 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.912144, -0.394835, 0.109992, -0.11429, 0.0126969, 0.993366, -0.393613, -0.918664, -0.0335444, -18, 7, 0 )
shadow_enabled = true

[node name="EggBasket" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.9666, 0, -10.1685 )

[node name="EggBasket2" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.0088, 0, 7.24161 )

[node name="EggCannon" type="Spatial" parent="."]
transform = Transform( -3.9634e-08, 0.818591, 0.574377, 1.84345e-08, 0.574377, -0.818591, -1, -2.18557e-08, -3.78552e-08, 13.6317, 2.40362, 0 )
script = ExtResource( 6 )
fixed_type = "jump"

[node name="MeshInstance" type="MeshInstance" parent="EggCannon"]
mesh = SubResource( 16 )
material/0 = null

[node name="Timer" type="Timer" parent="EggCannon"]
wait_time = 5.0
autostart = true

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource( 10 )

[node name="Delivered" type="Label" parent="GUI"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 9 )
text = "Delivered: 00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Broken" type="Label" parent="GUI"]
margin_top = 25.0
margin_right = 104.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 9 )
text = "Broken: 00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EggTutorials" type="Node2D" parent="GUI"]

[node name="GameOver" type="CanvasLayer" parent="."]
script = ExtResource( 16 )

[node name="Control" type="Control" parent="GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="GameOver/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 14 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="GameOver/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="GameOver/Control/CenterContainer"]
margin_left = 378.0
margin_top = 239.0
margin_right = 646.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 27 )
text = "00:00"

[connection signal="button_press" from="Player/Input" to="Player/Mover" method="_on_Input_button_press"]
[connection signal="button_release" from="Player/Input" to="Player/Mover" method="_on_Input_button_release"]
[connection signal="move_vec" from="Player/Input" to="Player/Mover" method="_on_Input_move_vec"]
[connection signal="timeout" from="EggCannon/Timer" to="EggCannon" method="_on_Timer_timeout"]
